# etsi-mano-workflows

./: README.md  install.sh  pyproject.toml  requirements.txt
CNF/: utility.php
CNF_Instance_Managed_Entities_Manager/: .meta_CNF_Instance_Managed_Entities_Manager.xml  .meta_Process_Create_Managed_Entity  .meta_Process_Deleted_Managed_Entities  .meta_Process_Move_To_Trash  .meta_Process_Refresh_Managed_Entities  CNF_Instance_Managed_Entities_Manager.xml
Descriptor_Graph_Generator/: .meta_Descriptor_Graph_Generator.xml  .meta_Process_Create_New_Service  .meta_Process_NS_Graph_Deletion  .meta_Process_NS_Graph_Generation  .meta_Process_VNF_Graph_Deletion  .meta_Process_VNF_Graph_Generation  Descriptor_Graph_Generator.xml
NFVI_Resources_Management/: .meta_NFVI_Resources_Management.xml  .meta__py__NFVI_Resources_Management.xml  NFVI_Resources_Management.xml
NSD_editor/: .meta_NSD_editor.xml  NSD_editor.xml
NS_Descriptor_editor/: .meta_NS_Descriptor_editor.xml  NS_Descriptor_editor.xml
NS_Instance_SCALE_IN/: .meta_NS_Instance_SCALE_IN.xml  NS_Instance_SCALE_IN.xml
NS_Instance_SCALE_OUT/: .meta_NS_Instance_SCALE_OUT.xml  NS_Instance_SCALE_OUT.xml
NS_LCM/: .meta_NS_LCM.xml  .meta_Process_Check_Package_Consistent  .meta_Process_Update_NS  NS_LCM.xml
NS_LCM__NSD_based-on_SOL001_/: .meta_NS_LCM__NSD_based-on_SOL001_.xml  .meta__py__NS_LCM__NSD_based-on_SOL001_.xml  NS_LCM__NSD_based-on_SOL001_.xml  _py__NS_LCM__NSD_based-on_SOL001_.xml
NS_Mgmt_Based_On_Heat/: .meta_NS_Mgmt_Based_On_Heat.xml  NS_Mgmt_Based_On_Heat.xml
VNFD_editor/: .meta_VNFD_editor.xml  (+1 more)
(+426 files in other folders)
