[tool.poetry]
name = "python-mano-client"
version = "1.0.0"
description = "ETSI MANNO python client for SOL002/3/5."
authors = ["Olivier Vignaud <ovi@ubiqube.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.7.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.3.1"
coverage = {extras = ["toml"], version = "^7.2.6"}
mypy = "^1.3.0"
pylint = "^2.17.4"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
